checker/tests/parsing/errors/keyword_as_field_name.mft
type T {
  operand: Bar;
}
=== error ===
Unrecognized token `operand` found at 11:18
Expected one of "identifier", "impl", "when" or "}"